--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: GBA HCI
 email:
-description: Symposium in Human-Computer Interaction
+description: Symposium for Human-Computer Interaction
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
